--- a/BinarySearchTree/CMakeLists.txt
+++ b/BinarySearchTree/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("BinarySearchTree")
 
 # Add source to this project's executable.
-add_executable (BinarySearchTree "BinarySearchTree.cpp" "BinarySearchTree.h")
+add_executable (BinarySearchTree "BinarySearchTree.cpp" "BinarySearchTree.h" "SequenceST.h" "FileOps.h")
 
 # TODO: Add tests and install targets if needed.
