--- a/UnionFind/CMakeLists.txt
+++ b/UnionFind/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("UnionFind")
 
 # Add source to this project's executable.
-add_executable (UnionFind "UnionFind.cpp" "UnionFind.h" "UnionFindTestHelper.h")
+add_executable (UnionFind "UnionFind.cpp" "UnionFind.h" "UnionFindTestHelper.h" "UnionFind2.h")
 
 # TODO: Add tests and install targets if needed.
