--- a/Graph/CMakeLists.txt
+++ b/Graph/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("Graph")
 
 # Add source to this project's executable.
-add_executable (Graph "Graph.cpp" "Graph.h" "DenseGraph.h" "SparseGraph.h")
+add_executable (Graph "Graph.cpp" "Graph.h" "DenseGraph.h" "SparseGraph.h" "ReadGraph.h")
 
 # TODO: Add tests and install targets if needed.
